--- a/_layouts/blocks.html
+++ b/_layouts/blocks.html
@@ -5,7 +5,7 @@ layout: default
 <!-- one, two and then four card rows -->
 <div class="ui centered grid stackable">
     {% assign counter = 0 %}
-    {% for block in site.blocks %}
+    {% for post in site.posts %}
         {% assign counter = counter | plus: 1 %}
         {% if counter == 1 %}
             <div class="eight wide column">
