--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,15 +1,26 @@
 <div class="ui card">
+
+    {% assign foundImage = 0 %}
+    {% assign images = post.content | split:"<img" %}
+    {% for image in images %}
+        {% if image contains 'src' %}
+            {% if foundImage == 0 %}
+                {% assign html = image | split:">" | first %}
+                <div class="image">
+                    <img {{ html }} />
+                </div> 
+                {% assign foundImage = 1 %}
+                {% break %}
+            {% endif %}
+        {% endif %}
+    {% endfor %}
+
     <div class="content">
-        <a class="header" href="{{ BASE_PATH }}{{ post.url }}">{{ post.title | strip_html | truncatewords: 15 }}</a>
-        <div class="meta">
-            <span class="date">{{ post.date | date_to_string }} 
-            {% if post.category %} 
-                in {{ post.categories }}
-            {% endif %} 
-            </span>
-        </div>
+        <div class="header">{{ post.title }}</div>
         <div class="description">
-            {{ post.content | strip_html | truncatewords: 30 }}
+            {{ post.content | remove_img | truncatewords: 300 }}
         </div>
+    </div>
+    <div class="extra content">
     </div>
 </div>
