--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,19 @@
----
-theme :
-  name : twitter
----
-{% include JB/setup %}
-{% include themes/twitter/default.html %}
+<!DOCTYPE html>
+<html lang="en-us">
+
+{% include head.html %}
+
+<body>
+    
+    <div class="page-wrap">
+        {% include header.html %}
+        <main>
+            {{ content }}
+        </main>
+    </div>
+    
+    {% include footer.html %}
+
+</body>
+
+</html>
