--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,12 @@
 ---
 layout: default
 ---
-{% include JB/setup %}
-{% include themes/twitter/page.html %}
+
+<div class="post-container">
+    <center>
+        <h1 class="post-title">{{ page.title }}</h1>
+    </center>
+    <div class="ui divider"></div>
+    {{ content }}
+    <br/>
+</div>
