strip unused header links
well, comment out
makes the header image hide

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,27 +4,29 @@
         {% if page.layout != "post" %}
         <div class="head-area">
             <h1 class="site-logo">
-                <a href="/"><img src="/assets/img/Rationalist_Directory_Image_molx4s.png" class="logo"/></a>
+                <!--
+                <a href="/"><img src="/assets/img/Rationalist_Directory_Image_molx4s.png"
+                    class="logo" /></a>
+                -->
             </h1>
             <h3 class="site-description">{{ site.description }}</h3>
         </div>
         {% endif %}
         <nav class="site-nav">
             <div class="left-nav">
-                <!-- add titles to all buttons -->
                 <div class="ui secondary menu inverted">
-                    <a class="item" href="/">
+                    <!--<a class="item" href="/">
                         Home
-                    </a>
-                    <a class="item" href="/about.html">
-                        About
-                    </a>
-                    <a class="item" href="/archive.html">
-                        Archive
-                    </a>
+                    </a> -->
                 </div>
             </div>
-            <div class="right-nav"></div>
+            <div class="right-nav">
+                <div class="ui secondary menu inverted">
+                    <!--<a class="item" href="/about.html">
+                        About
+                    </a>-->
+                </div>
+            </div>
         </nav>
     </header>
 </div>
